@@ -1,3 +1,4 @@
+- 04-12-04: Script Command 'basereset' now changes your level back 1 and exp to 0. [Darkhelmet]
 - 04-12-04: Added 'global' script command. [Darkhelmet]
 - 04-12-04: Fixed 'gcheck' script command. [Darkhelmet]
 - 04-11-04: Fixed 'removeequipment' script command. [Darkhelmet]
